# mastodon-lists-manager

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  LICENCE  README.md  app.py  db.py  gatsby-config.ts  mas.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
elm-stuff/0.19.1/: Main.elmi
src/: Main.elm
src/components/: AccountCard.tsx  CheckBox.tsx  Container.tsx  ListTable.tsx  PrimaryButton.tsx  SecondaryButton.tsx  TextField.tsx  TextInput.tsx
src/hooks/: useListsFollowingData.ts  useListsTable.tsx  useRedirect.ts  useRunOnce.ts
src/pages/: 404.tsx  client_details.tsx  index.tsx  lists_manage.tsx  oauth.tsx  set_instance.tsx
src/styles/: global.css
src/utils/: Mastodon.ts  Storage.ts  Utils.ts
